# MultiPlatformHello

./: CMakeLists.txt  README.md
include/multiplatformhello/: api.h  hello.h  input.h
lib/: CMakeLists.txt  input.cpp
src/: CMakeLists.txt  tester.cpp  tester2.cpp  tester3.cpp  tester4.cpp
