
set(CMAKE_CXX_STANDARD 17)

message(STATUS "SRC Directories: ${PROJECT_SOURCE_DIR} ${PROJECT_BINARY_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR}")

include_directories("${PROJECT_SOURCE_DIR}/include")
add_executable(test tester.cpp)
IF(MSVC)
    target_compile_options(test PUBLIC /EHsc /W4)
ENDIF(MSVC)
IF(UNIX)
    target_compile_options(test PUBLIC -Wall)
ENDIF(UNIX)

add_executable(test2 tester2.cpp)
target_link_libraries(test2 LINK_PUBLIC MultiPlatformHello)
IF(MSVC)
    target_compile_options(test2 PUBLIC /EHsc /W4)
ENDIF(MSVC)
IF(UNIX)
    target_compile_options(test2 PUBLIC -Wall)
ENDIF(UNIX)

add_executable(test3 tester3.cpp)
IF(MSVC)
    target_compile_options(test3 PUBLIC /EHsc /W4)
ENDIF(MSVC)
IF(UNIX)
    target_link_libraries(test3 LINK_PUBLIC pthread)
    target_compile_options(test3 PUBLIC -pthread -Wall)
ENDIF(UNIX)

add_executable(test4 tester4.cpp)
target_link_libraries(test4 LINK_PUBLIC MultiPlatformHello)
IF(MSVC)
    target_compile_options(test4 PUBLIC /EHsc /W4)
ENDIF(MSVC)
IF(UNIX)
    target_link_libraries(test4 LINK_PUBLIC pthread)
    target_compile_options(test4 PUBLIC -pthread -Wall)
ENDIF(UNIX)